INTYG-7243: Färdigställt AG1-14 validering (både back/frontend), lagt till villkorig visning av SKL-001.ALERT

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePercentField/uePercentField.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePercentField/uePercentField.directive.scss
@@ -2,6 +2,12 @@ ue-percent-field {
 
   @extend %field-set-disabled-ie11-fix;
 
+  .form-inline {
+    input.form-control {
+      width: 40px;
+    }
+  }
+
   input.form-control {
     height: 38px;
     width: 100%;
