INTYG-7543: Fixade så checkboxar blir disablade om man valt "Kan inte ta ställning"

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -6,6 +6,7 @@
      <wc-checkbox-wrapper>
         <input ng-attr-id="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}"
                type="checkbox"
+               ng-disabled="choice.disabled"
                ng-model="choice.selected"
                ng-change="updateValidation()">
       <label ng-attr-for="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}">
