INTYG-7356: lagt till datumbegränsningar för datuminputs i doi baserat på dödsdatum/anträffatdatum.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -28,6 +28,7 @@
               ng-class="{'validation-error' : hasValidationError('datum', $index)}"
               ng-model="orsak.datum"
               on-blur="validate()"
+              max-date="{{config.maxDate}}"
               add-date-parser="loose"></span>
       </td>
       <td class="dropdown-row">
