INTYG-7050: Fixade så ikonen är grå när icf-knappen är disabled.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.scss
@@ -45,6 +45,9 @@ ue-icf {
           color: #6a6a6a;
         }
       }
+      &.disabled .bluetext {
+        color: #6a6a6a;
+      }
     }
 
     .funktions-dropdown-plate {
