--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcfKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcfKategori.directive.html
@@ -1,4 +1,4 @@
-<div class="kategori">
+<div>
   <div class="kategorier">
     <input type="checkbox" class="big-checkbox" ng-model="kod.vald" />
     <span ng-click="toggle(kod)">{{kod.benamning}}</span><span class="visamer" ng-click="visamer = !visamer">{{visamer ? 'visa mindre':'visa mer'}} <i
