INTYG-7561: Styling, ffa padding.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -28,7 +28,7 @@
         <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].kompletterandeKoder" class="kategori"></ue-icf-kategori>
       </div>
 
-      <div ng-repeat="unika in kategorier.unika"
+      <div class="unika-wrapper" ng-repeat="unika in kategorier.unika"
             ng-if="unika[getKodTyp()] && (unika[getKodTyp()].centralaKoder.length > 0 ||
                    unika[getKodTyp()].kompletterandeKoder.length > 0)">
         <span class="kategori-label">ICF-kategorier för:</span><br />
