--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.scss
@@ -80,7 +80,7 @@ ue-icf {
 
         /* Behövs för att bottom padding ska fungera i IE */
         .kategori-content-padding {
-          padding: 10px 10px 30px 10px;
+          padding: 10px 20px 30px 20px;
         }
 
         .kategori:nth-child(odd) div {
@@ -134,6 +134,9 @@ ue-icf {
           padding: 10px;
           color: #6a6a6a;
         }
+      }
+      .unika-wrapper {
+        padding-top: 30px;
       }
 
       .fader {
@@ -236,7 +239,7 @@ ue-icf {
       border: 1px solid #c0c0c0;
       border-radius: 5px;
       background-color: #fff;
-      padding: 5px;
+      padding: 5px 7px 5px 7px;
       margin: 5px 5px 5px 0;
       display: inline-block;
     }
