--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -46,8 +46,8 @@
                value="{{model[config.kategoriProp].length > 0 ? 'Uppdatera' : 'Lägg till'}}"
                ng-click="add(kategorier)" />
       <input type="button" class="btn btn-secondary kategori-rensa" value="Avbryt" ng-click="rensa()" ng-disabled="isInteractionDisabled()"/>
-      <a href="https://www.socialstyrelsen.se/klassificeringochkoder/koderfunktionstillstandicf" target="_blank">Läs mer
-        om ICF hos Socialstyrelsen<i class="external-link-icon material-icons">launch</i></a>
+      <span><a href="https://www.socialstyrelsen.se/klassificeringochkoder/koderfunktionstillstandicf" target="_blank">Läs mer
+        om ICF hos Socialstyrelsen<i class="external-link-icon material-icons">launch</i></a></span>
     </div>
   </div>
 
