--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcfKategori.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcfKategori.directive.html
@@ -1,7 +1,8 @@
 <div>
   <div class="kategorier">
     <input type="checkbox" class="big-checkbox" ng-model="kod.vald" />
-    <span ng-click="toggle(kod)">{{kod.benamning}}</span><span class="visamer" ng-click="visamer = !visamer">{{visamer ? 'visa mindre':'visa mer'}} <i
+    <span ng-click="toggle(kod)">{{kod.benamning}}</span>
+    <span class="visamer" ng-click="visamer = !visamer">{{visamer ? 'visa mindre':'visa mer'}} <i
       class="glyphicon" ng-class="{'glyphicon-menu-down': !visamer, 'glyphicon-menu-up': visamer}"></i></span>
   </div>
   <div ng-if="visamer" class="beskrivning">{{kod.beskrivning}}</div>
