DEVENV: Sidhuvud-knappar hade olika marginal i vissa fall

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.scss
@@ -47,7 +47,7 @@ wc-intyg-button-bar {
   }
   div.white-space-no-wrap {
     display: flex;
-    > * {
+    > button, div {
       margin-left: 9px;
     }
   }
