--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -22,7 +22,7 @@
       <div class="kategori-content-padding">
       <div ng-if="kategorier.gemensamma[getKodTyp()] && (kategorier.gemensamma[getKodTyp()].centralaKoder.length > 0 ||
                   kategorier.gemensamma[getKodTyp()].kompletterandeKoder.length > 0)">
-        <span class="kategori-label">ICF-kategorier för:</span><br />
+        <span class="kategori-label">ICF-kategorier gemensamma för:</span><br />
         <strong class="medborder">{{diagnosBeskrivningen(kategorier.gemensamma[getKodTyp()].icd10Koder)}}</strong>
         <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].centralaKoder" class="kategori"></ue-icf-kategori>
         <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].kompletterandeKoder" class="kategori"></ue-icf-kategori>
