--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -1,8 +1,7 @@
 <div class="tab-content-title-row">Diagnosspecifik information</div>
 
 <div class="fmb-diagnos-row" ng-class="{'has-diagnose' : !vm.noDataMessage.warning && !vm.noDataMessage.incorrectKodverk}">
-  <span ng-repeat="d in fmb.diagnoses track by $index" class="fmb-diagnos-description">
-
+  <span ng-repeat="d in getDiagnoses()" class="fmb-diagnos-description">
    <wc-radio-wrapper>
         <input type="radio" name="fmb-radio-selectors" ng-attr-id="fmb_diagnos_radio_{{d.diagnosKod}}"
                ng-disabled="!d.hasInfo" ng-value="d" ng-model="vm.activeDiagnose">
