INTYG-5846: Radbryt alldeles för långa ord

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -545,6 +545,7 @@
   /* Used in fk7263 intygstyper. Maybe move it there */
   .multiline {
     white-space: pre-line;
+    word-break: break-word;
   }
 
   .white-space-normal {
