INTYG-5846: Radbryt alldeles för långa ord

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -545,7 +545,9 @@
   /* Used in fk7263 intygstyper. Maybe move it there */
   .multiline {
     white-space: pre-line;
-    word-break: break-word;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    display: block;
   }
 
   .white-space-normal {
