INTYG-7639: Rätt ikon för ersatta intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
@@ -3,8 +3,9 @@
         ng-show="certMetaModel">
     <div class="row-wrapper">
 
-        <div class="icon-wrapper">
-            <i class="icon icon-doc-text pull-left"></i>
+        <div class="icon-wrapper" ng-switch="certMetaModel.isReplaced">
+            <i ng-switch-when="false" class="icon icon-doc-text pull-left"></i>
+            <i ng-switch-when="true" class="icon icon-clone pull-left"></i>
         </div>
         <div class="certificate-header-wrapper">
             <div class="cert-type-title">
