--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
@@ -75,6 +75,7 @@ uv-boolean-value,
 uv-enum-value,
 uv-patient-grund,
 uv-list,
+uv-icf .value,
 uv-simple-value .value,
 uv-boolean-statement .value,
 uv-table uv-no-value {
