--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.scss
@@ -22,6 +22,12 @@ wc-intyg-header {
     height: 83px;
     padding: 10px;
   }
+
+  #tillbakaButton {
+    @extend %wc-typo-09;
+    color: $wc-color-06;
+    margin-right: 38px;
+  }
 }
 
 .page-header-divider {
@@ -46,6 +52,18 @@ wc-intyg-header {
 
 wc-intyg-header .wc-page-header {
   padding: 10px 28px 10px 28px;
+
+  .page-heading1 {
+    padding: 16px 0 0 0;
+    @extend %wc-typo-01;
+    color: $wc-color-06;
+  }
+
+  .page-heading2 {
+    padding: 8px 0 4px 0;
+    @extend %wc-typo-04;
+    color: $wc-color-06;
+  }
 }
 
 .wc-intyg-patient-namn-personnummer label {
@@ -54,6 +72,4 @@ wc-intyg-header .wc-page-header {
   margin-bottom: -5px;
 }
 
-#tillbakaButton {
-  margin-right: 50px;
-}
+
