INTYG-7705: AG7804 - visa de två togglefälten på nytt sätt (och releaterade frågor initialt disablade tills ja/nej satts)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss
@@ -1,5 +1,8 @@
 ue-fraga {
   display: block;
+  &.yellow-banner {
+    background-color: $wc-color-02;
+  }
 
   .ue-fraga {
     padding: 14px 28px 14px 28px;
