--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoAdministrativaFragorMessage/wcArendeNoAdministrativaFragorMessage.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeNoAdministrativaFragorMessage/wcArendeNoAdministrativaFragorMessage.directive.scss
@@ -22,6 +22,7 @@ wc-arende-no-administrativa-fragor-message {
   background-color: $wc-color-00;
   flex-direction: column;
   padding: 40px;
+  text-align: center;
 
   div {
     margin: auto;
