INTYG-7761: Lag till fix då samma icf-kod läggs till flera gånger.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -55,7 +55,7 @@
       <span class="problemListTitle">{{ config.modelProp == 'funktionsnedsattning' ?
           'Problem som påverkar patientens möjlighet att utföra sin sysselsättning:' :
           'Svårigheter som påverkar patientens sysselsättning:'}}</span>
-    <span class="problem" ng-repeat="val in model[config.kategoriProp]">{{val}}</span>
+    <span class="problem" ng-repeat="val in model[config.kategoriProp] track by $index">{{val}}</span>
   </div>
 
   <div ng-if="(focus || modelGetterSetter()) && model[config.kategoriProp].length > 0" class="placeholder">{{getPlaceHolder()}}</div>
