INTYG-7801: Fixat layout för sekretess och avliden alerts i patientheader.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcPatientStatus/wcPatientStatus.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcPatientStatus/wcPatientStatus.directive.scss
@@ -4,7 +4,7 @@ wc-patient-status {
     flex-wrap: wrap;
   }
   wc-alert-message .alert {
-    margin: 10px 10px 0 0;
+    margin: 10px 0 0 0;
     white-space: nowrap;
     .multiline {
       white-space: nowrap;
