INTYG-7309: Ändrat till rätt ikon-färg och rätt färg på popovern för sekretess.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvlidenIkon/wcSekretessAvlidenIkon.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvlidenIkon/wcSekretessAvlidenIkon.directive.scss
@@ -19,4 +19,8 @@
 
 wc-sekretess-avliden-ikon {
   display: inline-flex;
+  color: $wc-color-18;
+  .material-icons {
+    vertical-align: top;
+  }
 }
