--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -1,47 +1,46 @@
 <div class="ue-diagnos">
-<div class="row bottom-padding-small checkbox-wrapper">
-    <div class="bottom-padding-small col-xs-12"><span class="choose-code" dynamic-label key="common.sit.label.valj-version-icd-10"></span></div>
-    <div class="padding-left">
-        <div class="form-group">
-            <wc-radio-wrapper class="margin-right">
-                <input type="radio" id="diagnoseKodverk_ICD_10_SE" name="diagnosKodSystem" value="ICD_10_SE"
-                       ng-model="diagnosViewState.diagnosKodSystem" checked="checked"
-                       ng-change="onChangeKodverk(); validate()">
-                <label for="diagnoseKodverk_ICD_10_SE">
-                    <span dynamic-label key="common.sit.label.diagnoskodverk.fullstandig"></span>
-                </label>
-            </wc-radio-wrapper>
-            <wc-radio-wrapper>
-                <input type="radio" id="diagnoseKodverk_KSH_97_P" name="diagnosKodSystem" value="KSH_97_P"
-                       ng-model="diagnosViewState.diagnosKodSystem" ng-change="onChangeKodverk(); validate()">
-                <label for="diagnoseKodverk_KSH_97_P">
-                <span dynamic-label key="common.sit.label.diagnoskodverk.primarvard"></span>
-                </label>
-            </wc-radio-wrapper>
+    <div class="row bottom-padding-small checkbox-wrapper">
+        <div class="bottom-padding-small col-xs-12"><span class="choose-code" dynamic-label key="common.sit.label.valj-version-icd-10"></span></div>
+        <div class="padding-left">
+            <div class="form-group">
+                <wc-radio-wrapper class="margin-right">
+                    <input type="radio" id="diagnoseKodverk_ICD_10_SE" name="diagnosKodSystem" value="ICD_10_SE"
+                           ng-model="diagnosViewState.diagnosKodSystem" checked="checked"
+                           ng-change="onChangeKodverk(); validate()">
+                    <label for="diagnoseKodverk_ICD_10_SE">
+                        <span dynamic-label key="common.sit.label.diagnoskodverk.fullstandig"></span>
+                    </label>
+                </wc-radio-wrapper>
+                <wc-radio-wrapper>
+                    <input type="radio" id="diagnoseKodverk_KSH_97_P" name="diagnosKodSystem" value="KSH_97_P"
+                           ng-model="diagnosViewState.diagnosKodSystem" ng-change="onChangeKodverk(); validate()">
+                    <label for="diagnoseKodverk_KSH_97_P">
+                    <span dynamic-label key="common.sit.label.diagnoskodverk.primarvard"></span>
+                    </label>
+                </wc-radio-wrapper>
+            </div>
         </div>
     </div>
-</div>
 
-<ng-form name="diagnosForm" class="diagnos-wrapper">
-    <span class="diagnos-text" dynamic-label key="{{::config.diagnosKodLabel}}"></span>
-    <table class="margin-top">
-        <tr>
-            <th>
+    <ng-form name="diagnosForm" class="diagnos-wrapper">
+        <span class="diagnos-text" dynamic-label key="{{::config.diagnosKodLabel}}"></span>
+        <div class="diagnos-row flex-row">
+            <div class="code-column">
                 <span ng-if="::config.enableHelp">
                   <span wc-help-chevron help-text-key="{{::config.diagnosKodHelp}}"></span>
                   <span wc-help-chevron-text help-text-key="{{::config.diagnosKodHelp}}"></span>
                 </span>
-            </th>
-            <th>
+            </div>
+            <div class="diagnos-description-column">
                 <span dynamic-label key="{{::config.diagnosBeskrivningLabel}}"></span>
                 <span ng-if="::config.enableHelp">
                   <span wc-help-chevron help-text-key="{{::config.diagnosBeskrivningHelp}}"></span>
                   <span wc-help-chevron-text help-text-key="{{::config.diagnosBeskrivningHelp}}"></span>
                 </span>
-            </th>
-        </tr>
-        <tr class="diagnos-row" ng-repeat="diagnos in model[config.modelProp]">
-            <td class="code-column">
+            </div>
+        </div>
+        <div class="diagnos-row flex-row" ng-repeat="diagnos in model[config.modelProp]">
+            <div class="code-column">
                 <div class="input-wrapper">
                     <input type="text" class="col-xs-11 form-control" ng-attr-id="diagnoseCode-{{::$index|ueDomIdFilter}}"
                            name="diagnoseCode{{::$index}}"
@@ -74,8 +73,8 @@
                             <li><a href>Ange 3 tecken för att söka diagnoskod</a></li>
                       </ul>
                 </span>
-            </td>
-            <td class="diagnos-description-column input-wrapper">
+            </div>
+            <div class="diagnos-description-column input-wrapper">
                 <input type="text" class="col-xs-12 form-control column-width" ng-attr-id="diagnoseDescription-{{::$index|ueDomIdFilter}}"
                        ng-class="{'validation-error' : hasValidationError('diagnosbeskrivning', $index)}"
                        name="diagnose.description"
@@ -89,9 +88,8 @@
                        typeahead-on-select="onDiagnoseDescriptionSelect($index, $item)"
                        typeahead-template-url="/web/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.typeahead_template.html"
                        typeahead-wait-ms="100">
-            </td>
-        </tr>
-    </table>
-    <ue-validation-list field-type="{{config.type}}" validations="diagnosValidations"></ue-validation-list>
-</ng-form>
+            </div>
+            <ue-validation-list field-type="{{config.type}}" validations="getValidationErrors($index)" ></ue-validation-list>
+        </div>
+    </ng-form>
 </div>
