--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -19,10 +19,10 @@
 
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp]">
 
-    <div class="form-horizontal sjukskrivningar-section clearfix" data-ng-repeat="field in ::config.fields">
+    <div class="clearfix sjukskrivningar-section" data-ng-repeat="field in ::config.fields">
       <div class="row">
-        <div class="clearfix flex-wrapper" ng-class="{'extra-margin-bottom' : $index < 3 }">
-          <div class="col-vlg-auto col-lg-12 col-md-4 col-sm-12 checkbox-width">
+        <div class="flex-wrapper">
+          <div class="col-lg-12 col-md-4 col-sm-12 checkbox-width">
             <wc-checkbox-wrapper class="padding-bottom">
               <input type="checkbox" ng-model="viewstate.periods[field].checked"
                      ng-change="viewstate.updateCheckBox(field); validate()"  ng-attr-id="{{::config.modelProp + field|ueDomIdFilter}}">
@@ -33,23 +33,15 @@
             <span wc-help-chevron help-text-key="{{::config.code}}.{{::field}}.HLP"></span>
             <span wc-help-chevron-text help-text-key="{{::config.code}}.{{::field}}.HLP"></span>
           </div>
-          <div class="clearfix invisible-vlg visible-lg-block visible-sm-block"></div>
-          <div class="col-vlg-auto col-vlg-pull-right">
-            <div class="col-vlg-auto
-                        col-lg-auto col-lg-no-padding-right
-                        col-md-8
-                        col-sm-12 date-width">
+          <div>
+            <div class="col-md-8 col-sm-12 date-width">
               <div class="sjukskrivningar_period flex-wrapper">
                 <label for="{{::config.modelProp}}-{{::field}}-from">Fr.o.m</label>
                 <span wc-date-period-field model="::model" field="{{::config.modelProp}}" index="{{::field}}" type="from"
                       on-blur="validate()" ng-class="{'validation-error' : hasValidationError(field, 'from')}"></span>
               </div>
-              <div class="clearfix"></div>
             </div>
-            <div class="col-vlg-auto
-                        col-lg-auto
-                        col-md-12
-                        col-sm-12 date-width">
+            <div class="col-md-12 col-sm-12 date-width">
               <div class="sjukskrivningar_period flex-wrapper">
                 <label class="padding-right" for="{{::config.modelProp}}-{{::field}}-tom">t.o.m</label>
                 <span wc-date-period-field model="::model" field="{{::config.modelProp}}" index="{{::field}}" type="tom"
@@ -58,29 +50,23 @@
             </div>
           </div>
         </div>
+        <div class="col-xs-12">
+          <ue-validation-list field-type="sjukskrivning_period" validations="validationsForPeriod[field]"></ue-validation-list>
+        </div>
       </div>
 
-
-
-      <div class="col-lg-pull-none pull-right fold-animation fold-slide-animation"
+      <div class="pull-right fold-animation fold-slide-animation"
            ng-if="field != 'HELT_NEDSATT' && viewstate.periods[field].valid">
         Arbetstid: {{viewstate.periods[field].hoursPerWeek | number : 2}} timmar/vecka i
         {{viewstate.periods[field].days}} dagar.
       </div>
-
     </div>
 
     <div ng-if="viewstate.totalDays" class="fold-animation fold-slide-animation">
       Intyget motsvarar en period på {{viewstate.totalDays}} dagar.
     </div>
 
-    <div>
-      <div ng-repeat="field in ::config.fields">
-        <ue-validation-list field-type="sjukskrivning_period"
-                            validations="validationsForPeriod[field]"></ue-validation-list>
-      </div>
-      <ue-validation-list field-type="sjukskrivning_period" validations="overlapValidations"></ue-validation-list>
-    </div>
+    <ue-validation-list field-type="sjukskrivning_period" validations="overlapValidations"></ue-validation-list>
 
   </ue-validation-wrapper>
 
