INTYG-7722: AG7804 anpassad utskrift MI

--- a/skl/ag7804/src/main/resources/META-INF/resources/webjars/ag7804/minaintyg/views/view-cert.html
+++ b/skl/ag7804/src/main/resources/META-INF/resources/webjars/ag7804/minaintyg/views/view-cert.html
@@ -47,7 +47,7 @@
                                        enable-archive="true"
                                        enable-print="true"
                                        is-replaced="certMeta.isReplaced"
-                                       on-customize-pdf="customizeCertificate()" enable-customize="!cert.avstangningSmittskydd">
+                                       on-customize-pdf="customizeCertificate()" enable-customize="!cert.avstangningSmittskydd && (cert.onskarFormedlaDiagnos || cert.onskarFormedlaFunktionsnedsattning)">
 
         </mi-certificate-action-buttons>
 
