INTYG-7309: Punkter i tooltips

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvlidenIkon/wcSekretessAvlidenIkon.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvlidenIkon/wcSekretessAvlidenIkon.directive.html
@@ -1,7 +1,7 @@
 <span ng-if="avliden">
-  <i class="material-icons md-18" uib-popover="Patienten är avliden">error_outline</i>
+  <i class="material-icons md-18" uib-popover="Patienten är avliden.">error_outline</i>
 </span>
 
 <span ng-if="sekretessmarkering">
-  <i class="material-icons md-18" uib-popover="Patienten har en sekretessmarkering">security</i>
+  <i class="material-icons md-18" uib-popover="Patienten har en sekretessmarkering.">security</i>
 </span>
