--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.html
@@ -20,21 +20,17 @@
     </div>
     <div class="kategori-content">
       <div class="kategori-content-padding">
-      <div ng-if="kategorier.gemensamma[getKodTyp()] && (kategorier.gemensamma[getKodTyp()].centralaKoder.length > 0 ||
-                  kategorier.gemensamma[getKodTyp()].kompletterandeKoder.length > 0)">
+      <div ng-if="kategorier.gemensamma[getKodTyp()] && kategorier.gemensamma[getKodTyp()].icfKoder.length > 0">
         <span class="kategori-label">ICF-kategorier gemensamma för:</span><br />
         <strong class="medborder">{{diagnosBeskrivningen(kategorier.gemensamma[getKodTyp()].icd10Koder)}}</strong>
-        <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].centralaKoder" class="kategori"></ue-icf-kategori>
-        <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].kompletterandeKoder" class="kategori"></ue-icf-kategori>
+        <ue-icf-kategori kod="urval" ng-repeat="urval in kategorier.gemensamma[getKodTyp()].icfKoder" class="kategori"></ue-icf-kategori>
       </div>
 
       <div class="unika-wrapper" ng-repeat="unika in kategorier.unika"
-            ng-if="unika[getKodTyp()] && (unika[getKodTyp()].centralaKoder.length > 0 ||
-                   unika[getKodTyp()].kompletterandeKoder.length > 0)">
+            ng-if="unika[getKodTyp()] && unika[getKodTyp()].icfKoder.length > 0">
         <span class="kategori-label">ICF-kategorier för:</span><br />
         <strong class="medborder">{{diagnosBeskrivningen(unika.icd10Kod)}}</strong>
-        <ue-icf-kategori kod="urval" ng-repeat="urval in unika[getKodTyp()].centralaKoder" class="kategori"></ue-icf-kategori>
-        <ue-icf-kategori kod="urval" ng-repeat="urval in unika[getKodTyp()].kompletterandeKoder" class="kategori"></ue-icf-kategori>
+        <ue-icf-kategori kod="urval" ng-repeat="urval in unika[getKodTyp()].icfKoder" class="kategori"></ue-icf-kategori>
       </div>
       </div>
     </div>
