--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -88,7 +88,8 @@
                        uib-typeahead="d.value as d.label for d in searchDiagnoseByDescription(diagnosViewState.diagnosKodSystem, $viewValue)"
                        typeahead-on-select="onDiagnoseDescriptionSelect($index, $item)"
                        typeahead-template-url="/web/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.typeahead_template.html"
-                       typeahead-wait-ms="100">
+                       typeahead-wait-ms="100"
+                       maxlength="250">
             </td>
         </tr>
     </table>
