--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcHelpChevronText/wcHelpChevronText.directive.scss
@@ -27,7 +27,7 @@
   cursor: default;
 
   .scrollable-body {
-    padding: 25px 20px;
+    padding: 25px 20px 0;
     max-height: 190px; // 190 - padding = 140 = 7 text rows
   }
 
