--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -1,6 +1,8 @@
-@CHARSET "UTF-8";
+ @CHARSET "UTF-8";
 
+@import "components/fonts";
 @import "components/variables";
+@import "components/mixins";
 
 // Component styles are injected through grunt
 // injector
