INTYG-7056: Införde teckenräknare på komplettering och övrigtfält i smi-intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.html
@@ -33,11 +33,11 @@
             När du skickar svaret skapas en kopia av intyget med din kommentar i fältet "Övriga upplysningar".
             Signera och skicka intyget när du är klar.
           </div>
-          <div class="form-group">
+          <div class="form-group ovrigt-place-counter">
             <textarea id="komplettering-modal-dialog-ovriga-upplysningar"
                       class="form-control"
                       ng-model="model.ovrigaUpplysningar"
-                      maxlength="3500">
+                      wc-maxlength maxlength="3000">
             </textarea>
           </div>
         </div>
