--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -23,6 +23,8 @@
 @import '../app-shared/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
 @import '../app-shared/unified-view/components/uvTable/uvTable.directive.scss';
 @import '../app-shared/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.scss';
+@import 'components/_fonts.scss';
+@import 'components/_mixins.scss';
 @import 'components/common-intyg-modules.scss';
 @import 'components/customize-pdf/miCheckboxSlider.directive.scss';
 @import 'components/customize-pdf/miFishbone.directive.scss';
