INTYG-6644: Ändrat flöde och validering för att skicka nytt ärende

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueValidationList/ueValidationList.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/subcomponents/ueValidationList/ueValidationList.directive.scss
@@ -1,9 +1,11 @@
-ue-validation-list {
+ue-validation-list,
+.ue-validation-list{
 
   .validation-error {
     @extend %wc-typo-07;
     color: $wc-color-11;
     margin-top: 13px;
+    display: block;
   }
 
 }
