--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
@@ -1,26 +1,52 @@
-<div>
+<div ng-form="arendeForm">
   <div class="card"
        ng-if="showCreateArende()"
        wc-check-vardenhet vardenhet="{{localViewState.parentViewState.intyg.grundData.skapadAv.vardenhet.enhetsid}}"
        wc-authority feature="SKAPA_NY_FRAGA" intygstyp="{{localViewState.parentViewState.intygProperties.type}}">
 
     <!-- New question form -->
-    <div arende-draft-auto-save intyg-id="localViewState.parentViewState.intyg.id" amne="arendeNewModel.chosenTopic" text="arendeNewModel.frageText" save-state="arendeNewModel.saveState">
+    <div arende-draft-auto-save
+         intyg-id="localViewState.parentViewState.intyg.id"
+         amne="arendeNewModel.chosenTopic"
+         text="arendeNewModel.frageText"
+         save-state="arendeNewModel.saveState">
+
       <div class="arende-new-heading">
         Här kan du ställa en ny fråga till Försäkringskassan.
       </div>
-      <div class="form-group" id="arendeNewModelForm">
-        <wc-dropdown id="new-question-topic" ng-model="arendeNewModel.chosenTopic" items="arendeNewModel.topics" use-dynamic-label="false"></wc-dropdown>
-      </div>
+
       <div class="form-group">
-        <textarea id="arendeNewModelText"
-                  ng-trim="false"
-                  maxlength="2000"
-                  rows="13"
-                  class="form-control"
-                  ng-model="arendeNewModel.frageText"
-                  wc-focus-me="localViewState.focusArende"
-                  ue-filter-latin1></textarea>
+        <ue-validation-wrapper validations="validate.chosenTopic && arendeForm.chosenTopic.$invalid">
+          <wc-dropdown
+              id="new-question-topic"
+              ng-model="arendeNewModel.chosenTopic"
+              items="arendeNewModel.topics"
+              required
+              name="chosenTopic"
+              use-dynamic-label="false">
+          </wc-dropdown>
+          <div class="ue-validation-list" ng-show="validate.chosenTopic && arendeForm.chosenTopic.$invalid">
+              <span class="validation-error" dynamic-label key="common.arende.draft.error.chosenTopic"></span>
+          </div>
+        </ue-validation-wrapper>
+      </div>
+
+      <div class="form-group">
+        <ue-validation-wrapper validations="validate.frageText && arendeForm.frageText.$invalid">
+          <textarea id="arendeNewModelText"
+            ng-trim="false"
+            maxlength="2000"
+            rows="13"
+            class="form-control"
+            ng-model="arendeNewModel.frageText"
+            wc-focus-me="localViewState.focusArende"
+            required
+            name="frageText"
+            ue-filter-latin1></textarea>
+          <div class="ue-validation-list" ng-show="validate.frageText && arendeForm.frageText.$invalid">
+            <span class="validation-error" dynamic-label key="common.arende.draft.error.frageText"></span>
+          </div>
+        </ue-validation-wrapper>
       </div>
 
       <!-- error message occuring when inteacting with server for this FragaSvar-->
