INTYG-7055: Dölj asterisker om utkastet är låst

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -473,6 +473,13 @@
     left: -14px;
   }
 
+  /*
+  * Hide required asterisks on disabled forms
+  */
+  .cert-form > fieldset[disabled="disabled"] .required{
+    display: none;
+  }
+
   /* Not used? */
   .pointer-labels label {
     cursor: pointer;
