--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -130,6 +130,7 @@
   @import 'utkast/unified-edit/components/uePrognos/uePrognos.directive.scss';
   @import 'utkast/unified-edit/components/ueRadio/ueRadio.directive.scss';
   @import 'utkast/unified-edit/components/ueRadiogroup/ueRadiogroup.directive.scss';
+  @import 'utkast/unified-edit/components/ueSjukfranvaro/ueSjukfranvaro.directive.scss';
   @import 'utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.scss';
   @import 'utkast/unified-edit/components/ueSynskarpa/ueSynskarpa.directive.scss';
   @import 'utkast/unified-edit/components/ueText/ueText.directive.scss';
