INTYG-6868: Lagt till bock och text då ärenden hanterats automatiskt.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/hantera/arendeHantera.directive.scss
@@ -5,4 +5,9 @@ arende-hantera {
   wc-checkbox-wrapper {
     padding-right: 0;
   }
+
+  .handled-label {
+    @extend %wc-typo-07;
+    color: $wc-color-09;
+  }
 }
