--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.html
@@ -5,7 +5,7 @@
     </arende-panel-svar>
 
     <div class="card">
-        <arende-panel-header header-type="fraga" show-hantera="config.intygContext.isSigned && (unhandledKompletteringCount > 0 || unhandledAdminFragor > 0) && !showAnswer()" arende-list-item="arendeListItem" parent-view-state="parentViewState">
+        <arende-panel-header header-type="fraga" show-hantera="config.intygContext.isSigned && ((unhandledKompletteringCount > 0 || arendeSvar.answeredWithIntyg) || unhandledAdminFragor > 0) && !showAnswer()" arende-list-item="arendeListItem" parent-view-state="parentViewState">
         </arende-panel-header>
 
         <arende-vidarebefordra arende-list-item="arendeListItem" panel-id="{{panelId}}" parent-view-state="parentViewState"></arende-vidarebefordra>
