INTYG-6639: Ändringar i valideringstexter. Varningsmeddelanden är nu röda istället för svarta. Löst ett problem med att varningar inte visades.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.scss
@@ -6,7 +6,8 @@ ue-grid {
     }
   }
 
-  .row ue-validation-list .validation-error{
+  .row ue-validation-list .validation-error,
+  .row ue-validation-list .validation-warning {
     margin-top: 6.5px;
   }
 }
