--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.scss
@@ -22,6 +22,18 @@
     display: block;
   }
 
+  .form-group {
+    position: relative;
+  }
+
+  .required {
+    top: 3px;
+  }
+
+  .form-group-indent {
+    margin-left: 13px;
+  }
+
   wc-button {
     display: inline-block;
     &+.btn {
